tests/fixtures/errors/missing_arg_ctor.z
# E0300: record/class construction that omits a required field with no default.
point: record {
    x: i64
    y: i64
}
main: function is {
    p: point x: 5
}
